[package]
name = "wasm_gol_lua"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wasm_gol_lua_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walp_rs = {path = "../walp/common_bindings/rust"}
